syntax="proto3";

option  go_package = "/genproto";

package protos;

service ContentService {
    rpc CrateStory(CrateStoryRequest) returns (CrateStoryResponse) {}
    rpc UpdateStory(UpdateStoryRequest) returns (UpdateStoryResponse) {}
    rpc DeleteStory(DeleteStoryRequest) returns (DeleteStoryResponse) {}
    rpc GetAllStories(GetAllStoriesRequest) returns (GetAllStoriesResponse) {}
    rpc StoryFullInfo(StoryFullInfoRequest) returns (StoryFullInfoResponse) {}
    rpc CommentStory(CommentStoryRequest) returns (CommentStoryResponse) {}
    rpc GetAllComments(GetAllCommentRequest) returns (GetAllCommentResponse) {}
    rpc CreateLike (CreateLikeRequest) returns (CreateLikeResponse) {}
    rpc CreateItineraries(CreateItinerariesRequest) returns (CreateItinerariesResponse) {}
    rpc UpdateItineraries(UpdateItinerariesRequest) returns (UpdateItinerariesResponse) {}
    rpc DeleteItineraries(DeleteItinerariesRequest) returns (DeleteItinerariesResponse) {}
    rpc GetAllItineraries(GetAllItinerariesRequest) returns (GetAllItinerariesResponse) {}
    rpc ItinerariesFullInfo(ItinerariesFullInfoRequest) returns (ItinerariesFullInfoResponse) {}
    rpc CommentItineraries(CommentItinerariesRequest) returns (CommentItinerariesResponse) {}
    rpc GetDestinations(GetDestinationsRequest) returns (GetDestinationsResponse) {}
    rpc GetDestinationInfo(GetDestinationInfoRequest) returns (GetDestinationInfoResponse) {}
    rpc SentMessage(SentMessageRequest) returns (SentMessageResponse) {}
    rpc GetAllMessages(GetAllMessagesRequest) returns (GetAllMessagesResponse) {}
    rpc CreateTravelTip(CreateTravelTipRequest) returns (CreateTravelTipResponse) {}
    rpc GetTravelTips(GetTravelTipsRequest) returns (GetTravelTipsResponse) {}
    rpc UserStatistics(UserStatisticsRequest) returns (UserStatisticsResponse) {}
    rpc GetTrendingDestinations(GetTravelTipsRequest) returns (GetTravelTipsResponse) {}
}

message CrateStoryRequest {
    string title           = 1;
    string content         = 2;
    string location        = 3;
    repeated string tags   = 4;
    string author_id       = 5;
}

message CrateStoryResponse {
    string id              = 1;
    string title           = 2;
    string content         = 3;
    string location        = 4;
    repeated string tags   = 5;
    string author_id       = 7;
    string created_at      = 8;
}

message UpdateStoryRequest {
    string story_id = 1;
    string title    = 2;
    string content  = 3;
}

message UpdateStoryResponse {
    string id              = 1;
    string title           = 2;
    string content         = 3;
    string location        = 4;
    repeated string tags   = 5;
    repeated string images = 6;
    string author_id       = 7;
    string updated_at      = 8;
}

message DeleteStoryRequest {
    string story_id = 1;
}

message DeleteStoryResponse {
    bool message_story   = 1;
    string location      = 2;
    int32 likes_count    = 3;
    int32 comments_count = 4;
    string created_at    = 5;
}

message GetAllStoriesRequest {
    string author_id = 1;
    int32 limit      = 2;
    int32 offset     = 3;
}

message Author {
    string id        = 1;
    string username  = 2;
    string full_name = 3;
}

message Story {
    string id     = 1;
    string title  = 2;
    Author author = 3;

}

message GetAllStoriesResponse {
    repeated Story stories = 1;
}

message StoryFullInfoRequest {
    string story_id = 1;
}

message StoryFullInfoResponse {
    string id              = 1;
    string title           = 2;
    string content         = 3;
    string location        = 4;
    repeated string tags   = 5;
    Author author          = 6;
    int32 likes_count      = 7;
    int32 comments_count   = 8;
    string created_at      = 9;
    string updated_at      = 10;
}

message CommentStoryRequest {
    string story_id  = 1;
    string author_id = 2;
    string content   = 3;
}

message CommentStoryResponse {
    string id         = 1;
    string content    = 2;
    string author_id  = 3;
    string story_id   = 4;
    string created_at = 5;
}

message Comment {
    string id         = 1;
    string content    = 2;
    Author author     = 3;
    string created_at = 4;
}

message GetAllCommentRequest {
    string story_id = 1;
    int32 limit     = 2;
    int32 offset    = 3;
}

message GetAllCommentResponse {
    repeated Comment comment   = 1;
    string created_at = 2;
}

message CreateLikeRequest {
    string story_id = 1;
    string user_id  = 2;
}

message CreateLikeResponse {
    string story_id = 1;
    string user_id  = 2;
    string liked_at = 3;
}

message Destination {
    string name                = 1;
    string start_date          = 2;
    string end_date            = 3;
    repeated string activities = 4;
}

message CreateItinerariesRequest {
    string title             = 1;
    string description       = 2;
    string start_date        = 3;
    string end_date          = 4;
    Destination destinations = 5;
}

message CreateItinerariesResponse {
    string id          = 1;
    string title       = 2;
    string description = 3;
    string start_date  = 4;
    string end_date    = 5;
    string author_id   = 6;
    string created_at  = 7;
}

message UpdateItinerariesRequest {
    string itinerary_id = 1;
    string title        = 2;
    string description  = 3;
}

message UpdateItinerariesResponse {
    string id          = 1;
    string title       = 2;
    string description = 3;
    string start_date  = 4;
    string end_date    = 5;
    string author_id   = 6;
    string updated_at  = 7;
}

message DeleteItinerariesRequest {
    string itinerary_id = 1;
}

message DeleteItinerariesResponse {
    bool message_itinerary = 1;
}

message Itinerary {
    string id            = 1;
    string title         = 2;
    Author author        = 3;
    string start_date    = 4;
	string end_date      = 5; 
	int32 likes_count    = 6;
	int32 comments_count = 7;
	string created_at    = 8;
}

message GetAllItinerariesRequest {
    string itinerary_id = 1;
    int32 limit         = 2;
    int32 offset        = 3;
}

message GetAllItinerariesResponse {
    repeated Itinerary itineraries = 1;
}

message ItinerariesFullInfoRequest {
    string itinerary_id = 1;
}

message ItinerariesFullInfoResponse {
    string id                = 1;
    string title             = 2;
    string description       = 3;
    string start_date        = 4;
    string end_date          = 5;
    Author author            = 6;
    repeated Destination destinations = 7;
    int32 likes_count        = 8;
    int32 comments_count     = 9;
    string created_at        = 10;
    string updated_at        = 11;
}

message CommentItinerariesRequest {
    string itinerary_id = 1;
    string content      = 2;
    string author_id    = 3;
}

message CommentItinerariesResponse {
    string id           = 1;
    string content      = 2;
    string author_id    = 3;
    string itinerary_id = 4;
    string created_at   = 5;
}

message GetDestinationsRequest {
    string country = 1;
    string city    = 2;
    int32 limit    = 3;
    int32 offset   = 4;
}

message GetDestinationsResponse {
    string id                          = 1;
    string name                        = 2;
    string country                     = 3;
    string description                 = 4;
    repeated string popular_activities = 5;
}

message GetDestinationInfoRequest {
    string destination_id = 1;
}

message GetDestinationInfoResponse {
    string id                          = 1;
    string name                        = 2;
    string country                     = 3;
    string description                 = 4;
    repeated string popular_activities = 5;
    string best_time_to_visit          = 6;
    int32 average_cost_per_day         = 7;
    string currency                    = 8;
    string language                    = 9;
    repeated string top_attractions    = 10;
}

message SentMessageRequest {
    string recipient_id = 1;
    string sender_id    = 2;
    string content      = 3;
}

message SentMessageResponse {
    string id           = 1;
    string sender_id    = 2;
    string recipient_id = 3;
    string content      = 4;
    string created_at   = 5;
}

message Sender {
    string id       = 1;
    string username = 2;
}

message Recipient {
    string id       = 1;
    string username = 2;
}

message Message {
    string id           = 1;
    Sender sender       = 2;
    Recipient recipient = 3;
    string content      = 4;
    string created_at   = 5;
}

message GetAllMessagesRequest {
    string user_id = 1;
    int32  limit   = 2;
}

message GetAllMessagesResponse {
    Message messages = 1;
}

message CreateTravelTipRequest {
    string title    = 1;
    string content  = 2;
    string category = 3;
    string author_id = 4;
}

message CreateTravelTipResponse {
    string id         = 1;
    string title      = 2;
    string content    = 3;
    string category   = 4;
    string author_id  = 5;
    string created_at = 6;
}

message Tip {
    string id         = 1;
    string title      = 2;
    string category   = 3;
    Author author     = 4;
    string created_at = 5;
}

message GetTravelTipsRequest {
    int32 limit  = 1;
    int32 offset = 2;
}

message GetTravelTipsResponse {
    repeated Tip tips = 1;
}

message UserStatisticsRequest {
    string user_id = 1;
}

message MostPopularStory {
    string id         = 1;
    string title      = 2;
    int32 likes_count = 3;
}

message MostPopularItinerary {
    string id         = 1;
    string title      = 2;
    int32 likes_count = 3;
}

message UserStatisticsResponse {
    string user_id                              = 1;
    int32 total_stories                         = 2;
    int32 total_itineraries                     = 3;
    int32 total_countries_visited               = 4;
    int32 total_likes_received                  = 5;
    int32 total_comments_received               = 6;
    MostPopularStory most_popular_story         = 7;
    MostPopularItinerary most_popular_itinerary = 8;
}

message GetTrendingDestinationsRequest {}

message GetTrendingDestinationsResponse {
    repeated Destination destinations = 1;
    int32 total                       = 2;
}